sysutils/rustic: Add new port
Rustic is a backup tool that provides fast, encrypted, deduplicated backups.

It reads and writes the restic repo format described in the design document and
can be used as a restic replacement in most cases.

It is implemented in Rust, a performant, memory-efficient, and reliable
cross-platform systems programming language.

Stability

Rustic currently is in beta state and misses regression tests. It is not
recommended to use it for production backups, yet.

https://rustic.cli.rs/

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1286,6 +1286,7 @@
     SUBDIR += rush
     SUBDIR += rust-coreutils
     SUBDIR += rust-findutils
+    SUBDIR += rustic
     SUBDIR += rw
     SUBDIR += rw-tui
     SUBDIR += s-tui
