--- a/filesystems/moosefs-client/Makefile
+++ b/filesystems/moosefs-client/Makefile
@@ -1,10 +1,12 @@
 PORTREVISION=	0
-PKGNAMESUFFIX=	-client
+PKGNAMESUFFIX=	-${MFS_COMPONENT}
 
 COMMENT=	MooseFS client tools
 
+BROKEN_powerpc64=	fails to compile: mfs_fuse.c: internal compiler error: Segmentation fault
+
 MFS_COMPONENT=	client
 
-MASTERDIR=	${.CURDIR}/../moosefs3-master
+MASTERDIR=	${.CURDIR}/../moosefs-master
 
 .include "${MASTERDIR}/Makefile"
