audio/blucli: New Port: BluOS CLI (blu) for Bluesound/NAD BluOS players
Features:
*  Discovery: mDNS (_musc/_musp/_musz/_mush) + LSDP fallback (blu devices)
*  Device selection: --device, BLU_DEVICE, config default_device, aliases,
   discovery names
*  Playback: play/pause/stop/next/prev + play --url/--seek/--id
*  Volume + modes: volume, mute, shuffle, repeat
*  Grouping: group status|add|remove
*  Queue/presets/browse: queue, presets, browse, playlists, inputs
*  TuneIn: tunein search|play for quick "play X"
*  Spotify Connect: spotify open (and optional Web API spotify
   login/search/play)
*  Sleep timer: sleep
*  Watch: long-poll Status / SyncStatus (watch status|sync)
*  Scripting/safety: --json, --dry-run, --trace-http
*  Diagnostics: diag, doctor, raw endpoint runner
*  Shell completions: completions bash|zsh

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -61,6 +61,7 @@
     SUBDIR += bjumblr-lv2
     SUBDIR += bliss
     SUBDIR += blop
+    SUBDIR += blucli
     SUBDIR += boca
     SUBDIR += boops-lv2
     SUBDIR += bristol
