--- a/net-im/gajim/Makefile
+++ b/net-im/gajim/Makefile
@@ -17,7 +17,7 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}build>0:devel/py-build@${PY_FLAVOR} \
 LIB_DEPENDS=	libgsound.so:audio/gsound \
 		libsoup-3.0.so:devel/libsoup3 \
 		libspelling-1.so:x11-toolkits/libspelling
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>=1.16.0:graphics/py-cairo@${PY_FLAVOR} \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycairo>=1.16.0:graphics/py-pycairo@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}css-parser>0:www/py-css-parser@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}emoji>=2.6.0:misc/py-emoji@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}keyring>0:security/py-keyring@${PY_FLAVOR} \
