--- a/sysutils/devedeng/Makefile
+++ b/sysutils/devedeng/Makefile
@@ -12,7 +12,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libcanberra.so:audio/libcanberra
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}urllib3>0:net/py-urllib3@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}cairo>0:graphics/py-cairo@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}pycairo>0:graphics/py-pycairo@${PY_FLAVOR} \
 		ffmpeg>1.2.6:multimedia/ffmpeg \
 		dvdauthor:multimedia/dvdauthor \
 		vcdimager:multimedia/vcdimager \
