--- a/x11-themes/plasma6-breeze-gtk/Makefile
+++ b/x11-themes/plasma6-breeze-gtk/Makefile
@@ -5,9 +5,9 @@ CATEGORIES=	x11-themes kde kde-plasma
 MAINTAINER=	kde@FreeBSD.org
 COMMENT=	Breeze widget theme for GTK 2 and 3
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>0:graphics/py-cairo@${PY_FLAVOR} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycairo>0:graphics/py-pycairo@${PY_FLAVOR} \
 		sassc:textproc/sassc
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>0:graphics/py-cairo@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycairo>0:graphics/py-pycairo@${PY_FLAVOR}
 
 USES=		cmake gnome kde:6 python qt:6 tar:xz
 USE_GNOME=	gtk20
