--- a/x11/mate-dock-applet/Makefile
+++ b/x11/mate-dock-applet/Makefile
@@ -13,7 +13,7 @@ LICENSE_FILE_GPLv3=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libbamf3.so:sysutils/bamf
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>=0:graphics/py-cairo@${PY_FLAVOR} \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycairo>=0:graphics/py-pycairo@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}distro>=0:sysutils/py-distro@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pillow>=0:graphics/py-pillow@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}python-xlib>=0:x11-toolkits/py-python-xlib@${PY_FLAVOR} \
