--- a/graphics/py-photocollage/Makefile
+++ b/graphics/py-photocollage/Makefile
@@ -12,7 +12,7 @@ WWW=		https://github.com/adrienverge/PhotoCollage
 LICENSE=	GPLv2+
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}cairo>0:graphics/py-cairo@${PY_FLAVOR} \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycairo>0:graphics/py-pycairo@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}six>:devel/py-six@${PY_FLAVOR} \
 		${PY_PILLOW}
 
