--- a/graphics/py-rlpycairo/Makefile
+++ b/graphics/py-rlpycairo/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	rlpycairo
 DISTVERSION=	0.4.0
+PORTREVISION=	1
 CATEGORIES=	graphics print python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
