--- a/print/py-fonttools/Makefile
+++ b/print/py-fonttools/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	fonttools
 PORTVERSION=	4.61.1
+PORTREVISION=	1
 CATEGORIES=	print python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
