--- a/sysutils/devedeng/Makefile
+++ b/sysutils/devedeng/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	devedeng
 DISTVERSION=	4.21.0
+PORTREVISION=	1
 CATEGORIES=	sysutils multimedia python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
