databases/redis_exporter: Update 1.80.0 => 1.81.0
Changelog:
https://github.com/oliver006/redis_exporter/releases/tag/v1.81.0

Commit log:
https://github.com/oliver006/redis_exporter/compare/v1.80.0...v1.81.0

Drop ${STRIP} as it's already implied.

PR:	293133

--- a/databases/redis_exporter/Makefile
+++ b/databases/redis_exporter/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	redis_exporter
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.80.0
-PORTREVISION=	4
+DISTVERSION=	1.81.0
 CATEGORIES=	databases
 
 MAINTAINER=	arcade@b1t.name
@@ -21,6 +20,6 @@ GO_BUILDFLAGS=	-v -ldflags "${LD_FLAG_STRING}"
 PLIST_FILES=	bin/redis_exporter
 
 LD_FLAG_X_PREFIX=	-X main
-LD_FLAG_STRING=		${STRIP} ${LD_FLAG_X_PREFIX}.BuildVersion=${DISTVERSION}
+LD_FLAG_STRING=		${LD_FLAG_X_PREFIX}.BuildVersion=${DISTVERSION}
 
 .include <bsd.port.mk>
