--- a/deskutils/nextcloudclient/Makefile
+++ b/deskutils/nextcloudclient/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	nextcloudclient
 PORTVERSION=	4.0.6
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	deskutils
 
 MAINTAINER=	mr@FreeBSD.org
