--- a/emulators/firebird/Makefile
+++ b/emulators/firebird/Makefile
@@ -1,7 +1,8 @@
-PORTNAME=	firebird-emu
+PORTNAME=	firebird
 DISTVERSIONPREFIX=	v
 DISTVERSION=	1.6
 CATEGORIES=	emulators
+PKGNAMESUFFIX=	-emu
 
 MAINTAINER=	nsonack@herrhotzenplotz.de
 COMMENT=	Emulator of the ARM-based TI-Nspire calculators
@@ -16,8 +17,7 @@ USES=		compiler:c++17-lang desktop-file-utils gl qmake qt:5
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	nspire-emus
-GH_PROJECT=	firebird
-GH_TUPLE=	jacobly0:gif-h:8cb648f:firebird/core/gif-h
+GH_TUPLE=	jacobly0:gif-h:8cb648fb02d3f18fb7f325cbe71bbb0a56a0bbe7:firebird/core/gif-h
 
 USE_QT=		core declarative gui network widgets buildtools:build
 USE_GL+=	gl
