lang/python312: pull in upstream commits addressing vuxml entries
Security: bfe9adc8-0224-11f1-8790-c5fb948922ad
(cherry picked from commit 6ffe928349a0352572a5b52dc3d5aa73c2fdc272)

--- a/lang/python312/Makefile
+++ b/lang/python312/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	python
 DISTVERSION=	${PYTHON_DISTVERSION}
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	lang python
 MASTER_SITES=	PYTHON/ftp/python/${DISTVERSION:C/[a-z].*//}
 PKGNAMESUFFIX=	${PYTHON_SUFFIX}
@@ -10,7 +10,12 @@ DIST_SUBDIR=	python
 PATCH_SITES=	https://github.com/python/cpython/commit/
 PATCHFILES=	d849cf5fec76947865370a41baba8934c581cdb2.patch:-p1 \
 		9c9dda6625a2a90d2a06c657eee021d6be19842d.patch:-p1 \
-		14b1fdb0a94b96f86fc7b86671ea9582b8676628.patch:-p1
+		14b1fdb0a94b96f86fc7b86671ea9582b8676628.patch:-p1 \
+		e417f05ad77a4c30ddc07f99e90fc0cef43e831a.patch:-p1 \
+		a76e4cd62dd68e7cbe86e37e6ed988495a646b66.patch:-p1 \
+		4ed11d3cd288e6b90196a15c5a825a45d318fe47.patch:-p1 \
+		4802b96a2cde58570c24c13ef3289490980961c5.patch:-p1 \
+		62700107418eb2cca3fc88da036a243ea975f172.patch:-p1
 
 MAINTAINER=	python@FreeBSD.org
 COMMENT=	Interpreted object-oriented programming language
