graphics/darktable: Update to 5.4.1
Release notes:
* https://github.com/darktable-org/darktable/releases/tag/release-5.4.0
* https://github.com/darktable-org/darktable/releases/tag/release-5.4.1

PR:		292928
Submitted by:	Matthieu Volat <mazhe@alkumuna.eu> (initial patch)

--- a/graphics/darktable/Makefile
+++ b/graphics/darktable/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	darktable
-PORTVERSION=	5.2.1
-PORTREVISION=	3
+PORTVERSION=	5.4.1
 CATEGORIES=	graphics
 MASTER_SITES=	https://github.com/darktable-org/${PORTNAME}/releases/download/release-${PORTVERSION:C/\.rc/rc/}/
 
@@ -66,7 +65,7 @@ CFLAGS+=	-fopenmp -Wno-thread-safety-analysis
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION:C/\.rc/~rc/}
 
-OPTIONS_DEFINE=		DOCS GMIC GRAPHMAGICK LIBSECRET NLS PRINT TOOLS
+OPTIONS_DEFINE=		DOCS GMIC GRAPHMAGICK IMAGEMAGICK LIBSECRET NLS PRINT TOOLS
 OPTIONS_DEFAULT=	PRINT
 OPTIONS_SUB=		yes
 
@@ -79,6 +78,9 @@ GMIC_CMAKE_BOOL=	USE_GMIC
 
 GRAPHMAGICK_LIB_DEPENDS=libGraphicsMagick.so:graphics/GraphicsMagick
 GRAPHMAGICK_CMAKE_BOOL=	USE_GRAPHICSMAGICK
+
+IMAGEMAGICK_USES=	magick:7
+IMAGEMAGICK_CMAKE_BOOL=	USE_IMAGEMAGICK
 
 LIBSECRET_LIB_DEPENDS=	libsecret-1.so:security/libsecret
 LIBSECRET_CMAKE_BOOL=	USE_LIBSECRET
